--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 7vh;
+  border-bottom: 1px #ccc solid;
   align-items: center;
+}
+
+.nav-items{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 50vh;
+  padding-right: 10vh;
+}
+
+.sportmilk{
+  padding-left: 10vh;
+}
+
+.feed-body{
+  height: 92.9vh;
+  background-color: rgb(250, 248, 248);
+  display: flex;
+  flex-direction: row;
+}
+
+.feed-right{
+  width: 50vw;
+  background-color: red;
+
+}
+
+.feed-left{
+  display: flex;
+  width: 50vw;
+  /* background-color: green; */
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.left-content{
+  /* background-color: purple; */
+  width: 30vw;
+  padding-top: 15vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form{
+  display: flex;
+}
+
+.Footer{
+  height: 50vh;
+  background-color: black;
 }
