--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
 }
 nav{
   display: flex;
@@ -25,6 +25,7 @@ nav{
 .sportmilk{
   padding-left: 17vh;
 }
+
 
 .feed-body{
   height: 92.9vh;
@@ -66,11 +67,37 @@ form{
   display: flex;
 }
 
-.Footer{
-  height: 50vh;
-  background-color: black;
-}
+
 
 .Card-main{
   height: 15vh;
+}
+
+.news{
+  height: 30vh;
+}
+
+.newss{
+  background-color: red;
+  
+}
+
+.about-content{
+  display: flex;
+
+}
+
+p{
+  font-size: 2.1vh;
+  line-height: 1.8em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.about-content-content{
+  font-family: 'Lora', serif;
+}
+
+.description{
+  font-family: 'Lora';
 }
